--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vue-tsc -b && vite build && gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.7.9",
@@ -14,10 +15,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
+    "@types/gh-pages": "^6",
     "@types/node": "^22.10.1",
     "@vitejs/plugin-vue": "^5.2.1",
     "eslint": "^9.16.0",
     "eslint-plugin-vue": "^9.32.0",
+    "gh-pages": "^6.2.0",
     "sass": "^1.81.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.17.0",
