--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
           node-version: 20
           cache: "yarn"
       - name: Install dependencies
-        run: yarn install --immutable --immutable-cache --verbose
+        run: yarn install --immutable
 
       - name: Set environment variables
         run: |
